Fri Jan 16 19:04:35 1998  Mario Weilguni  <mweilguni@sime.com>

	* Improved Makefiles. Now documentation and rulesets are correctly
	uninstalled with "make uninstall"

	* Toplevel Makefile.am improved. Subdir traversal is only done for
	installing, not for compiling

	* fixed that "segfault-on-rulecheck" bug introduced by coolo's
	modifications for locale support.

	* RuleSet::checkRuleFile() now returns 0 on success, otherwise
	1. kppp uses this as exit value.

	* fixed a bug in the swiss rulesets

	* added file "checkrules" in Rules. It autochecks all rules found
	and reports bad rulesets.

Thu Jan 15 20:31:14 1998  Mario Weilguni  <mweilguni@sime.com>

	* Ported kppp to use automake. 

	* Since the rulefiles now have separate subdirectories, I have
	removed the prefix (i.e. Spain/Spain_Inovia.rst -->
	Spain/Inovia.rst). Since the old files still exist it should be no
	problem for users of former kppp versions.

	* renamed config.h to kpppconfig.h because it conflicts with the
	default include file config.h, generated from autoconf

Wed Jan 14 12:12:29 1998  Mario Weilguni  <mweilguni@sime.com>

	* main.cpp: pressing Enter in ID_Edit moves focus to PW_Edit, in
	PW_Edit moves focus to the connect-button

Wed Jan 14 04:13:57 1998  Harri Porten  <porten@tu-harburg.de>

	* fixed a bug that caused passwords to be spread among other accounts.
	  Triggering XPPPWidget::entryChanged() had a nasty side effect. 

Tue Jan 13 17:50:07 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* fixed a bug introduced with the creation of the 'execute command
	  on disconnect' option

	* CD is by default off. It doesn't work on my internal modem 
	  and I suspect it might not even work on most (all) internal modems ..

Tue Jan 13 12:02:33 1998  Mario Weilguni <mweilguni@sime.com>
	* the PAP authentication file is now created in the users
	  homedirectory. Otherwise I'd have to create the directory 
	  myself and fix the permissions if kppp runs suid root - 