@@ -1,3 +1,8 @@
+Fri Jan 16 21:41:08 1998  Stephan Kulow  <coolo@kde.org>
+
+	* some improvements to the toplevel Makefile.am. rpath is very
+	important for setuid programs
+
 Fri Jan 16 19:04:35 1998  Mario Weilguni  <mweilguni@sime.com>
 
 	* Improved Makefiles. Now documentation and rulesets are correctly
